--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/EmployeesFX.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mariadb-java-client-2.4.4.jar=C:\\Users\\LJChao-PC\\Downloads\\mariadb-java-client-2.4.4.jar
+file.reference.mariadb-java-client-2.4.4.jar=src/mariadb-java-client-2.4.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
